mx-packageinstaller (25.12.3) mx; urgency=medium

  * Cache flatpak listings and normalize refs for user scope
  * List flatpak versions that were removed from repos
  * Autoajust flatpak columns
  * Ensure user flatpak remotes are initialized when switching scope

 -- Adrian <adrian@mxlinux.org>  Thu, 04 Dec 2025 17:27:25 -0500

mx-packageinstaller (25.12) mx; urgency=medium

  * Move .Platform packages from Apps to Runtime Flatpak category

 -- Adrian <adrian@mxlinux.org>  Tue, 02 Dec 2025 10:55:41 -0500

mx-packageinstaller (25.09.1) mx; urgency=medium

  * Performance fix: select all checkboxes in a batch manner
  * Add sudo as backup to pkexec -- but it would only work if ran from
    CLI
  * Minor interface fix, display message first and then switch to
    Popular tab

 -- Adrian <adrian@mxlinux.org>  Thu, 11 Sep 2025 15:29:22 -0400

mx-packageinstaller (25.09) mx; urgency=medium

  * Remember HideLibs selection
  * Add a select all checkbox for 'Upgradable' and 'Autoremovable'
    filters

 -- Adrian <adrian@mxlinux.org>  Fri, 05 Sep 2025 12:02:47 -0400

mx-packageinstaller (25.08.2) mx; urgency=medium

  * Fix VersionNumber comparison to match dpkg semantics

 -- Adrian <adrian@mxlinux.org>  Wed, 20 Aug 2025 16:51:35 -0400

mx-packageinstaller (25.08.1) mx; urgency=medium

  * Fix: adding flatpak repos for --user if not available
  * Performance improvements

 -- Adrian <adrian@mxlinux.org>  Sat, 02 Aug 2025 14:11:12 -0400

mx-packageinstaller (25.08) mx; urgency=medium

  * Fix: detection for multiple packages

 -- Adrian <adrian@mxlinux.org>  Fri, 01 Aug 2025 11:57:07 -0400

mx-packageinstaller (25.7) mx; urgency=medium

  * Fix checkinstall function, selecting multiple installed packages
    should give the option to uninstall them

 -- Adrian <adrian@mxlinux.org>  Fri, 11 Jul 2025 12:13:33 -0400

mx-packageinstaller (25.6.01) mx; urgency=medium

  * Fix localization

 -- Adrian <adrian@mxlinux.org>  Wed, 18 Jun 2025 20:56:55 -0400
